# jorss-gbo-taai

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.production.template  .env.ux-rollout.example  .gitignore  .stylelintrc.json  ADVISOR_FLOW_MAP.md  AI_ENHANCEMENT_ROADMAP.md  AI_UX_ENHANCEMENTS.md  ALL_FIXED_FINAL.html  ARCHITECTURE.md  BRANDING_FIXED_TEST_ALL_URLS.html  BROKEN_PAGES_REPORT.md  CHANGELOG_2025.md  COMPREHENSIVE_CHATBOT_SCENARIO_ANALYSIS.md  CONFIDENCE_SCORE_VISIBILITY_IMPLEMENTATION.md  CPA_LAUNCH_CHECKLIST.md  CRITICAL_SECURITY_FIXES_APPLIED.md  CRITICAL_VULNERABILITIES_FOUND.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENTERPRISE_GRADE_PLATFORM_AUDIT.md  FILING_OPTIONS_RESTORED.md  FINAL_PRODUCT_FLOW.md  FINAL_TEST_PAGE.html  FIRST_PRINCIPLES_DIAGNOSTIC.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_GUIDE_WORLD_CLASS_UX.js  IMPLEMENTATION_PROGRESS_LOG.md  INFRASTRUCTURE_AUDIT_MKW31.md  LAYOUT_SPACE_IMPROVEMENTS.md  MANUAL_TESTING_GUIDE.md  MASTER_UI_UX_IMPLEMENTATION_SCHEDULE.md  MASTER_VULNERABILITY_AUDIT_COMPLETE.md  PERFORMANCE_BOTTLENECKS_COMPREHENSIVE.md  PHASE_2_TASK_3_MOBILE_FIRST_PROGRESS.md  PHASE_2_TASK_4_TYPOGRAPHY_COMPLETE.md  PHASE_3_VISUAL_MODERNIZATION_COMPLETE.md  (+56 more)
.claude/: settings.local.json
.storybook/: main.js  preview.js
client_materials/: ADVISORY_REPORT_COVERS.md  CLIENT_EMAIL_TEMPLATES.md  CLIENT_FAQ.md  CLIENT_ONBOARDING.md  ENGAGEMENT_LETTERS.md  LEAD_MAGNET_CONTENT.md  README.md  SERVICE_DESCRIPTIONS.md  TAX_PLANNING_GUIDES.md
data/: tax_returns.db
docs/: ADMIN_PANEL_ARCHITECTURE.md  API.md  (+49 more)
(+2357 files in other folders)
